--- a/package.json
+++ b/package.json
@@ -13,20 +13,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
     "date-fns": "^2.29.3",
-    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-slideshow-image": "^4.0.5",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,16 +47,12 @@
     ]
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1",
-    "@redux-devtools/dock-monitor": "^3.0.1",
-    "@redux-devtools/log-monitor": "^4.0.1",
     "autoprefixer": "^10.4.12",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
     "tailwindcss-textshadow": "^2.1.3"
   }
