--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,11 +7,13 @@
    "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
    "overrides": [],
    "parserOptions": {
+      "ecmaFeatures": {
+         "jsx": true
+      },
       "ecmaVersion": "latest",
       "sourceType": "module"
    },
-   "plugins": ["react"],
-   "ignorePatterns": ["**/node_modules"],
+   "plugins": [],
    "rules": {
       "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
